Fix mobile search text overlapping
Bug: T343397

--- a/resources/mobile.pagelist.styles/pagelist.less
+++ b/resources/mobile.pagelist.styles/pagelist.less
@@ -50,10 +50,8 @@
 		.title {
 			flex-grow: 1;
 			display: block;
-
-			&:hover {
-				text-decoration: none;
-			}
+			text-decoration: none;
+			color: #72777d;
 		}
 	}
 
